management page alignment issue solved

--- a/wp-content/themes/zerif-lite/style.css
+++ b/wp-content/themes/zerif-lite/style.css
@@ -3279,7 +3279,7 @@ article .posted-on a:hover{
 	text-align: justify;
 }
 .entry-content{
-	margin: 1em 0 0;
+	margin: 1em 1em 0;
 }
 .row{
     float: left;
